tests/paczka1/small_fuzzy/45453449.err
Error in line 1: S945 S22( (3,8
Error in line 7: J8sk S344 25,24
